Added "Stat report for Léo Corporation and Devyus in July 2024"

--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Blog | Peyronnet Group"
 theme = "blist"
 
 DefaultContentLanguage = "en"
-DefaultContentLanguageInSubdir = true
+DefaultContentLanguageInSubdir = false
 [languages]
   [languages.en]
     contentDir = "content/en" #English
